# HILElevatorSystem

./: CMakeLists.txt  README.md  UMLdiagrams.mdj  siauClassDiagram.mdj  siauDiagrams.mdj
Client (PC)/: CMakeLists.txt
Client (PC)/include/: Button.h  CallButton.h  ClientComModule.h  FloorButton.h  LocalController.h
Client (PC)/resources/: Elevator.qml  Floor.qml  main.qml
Client (PC)/serialib/example1/: main.cpp
Client (PC)/serialib/example2/: main.cpp
Client (PC)/serialib/example3/: main.cpp
Client (PC)/serialib/example4/: main.cpp
Client (PC)/src/: Button.cpp  CallButton.cpp  ClientComModule.cpp  Elevator.cpp  GuiElevator.cpp  LocalController.cpp  main.cpp
Server (Controller)/: CMakeLists.txt  compileAndFlash.sh
Server (Controller)/include/: Elevator.h  ServerController.h
Server (Controller)/mbed-os/tools/cmake/profiles/: debug.cmake  develop.cmake  release.cmake
Server (Controller)/src/: Elevator.cpp  ServerComModule.cpp  ServerController.cpp  main.cpp
include/: Button.h  ClientComModule.h  Elevator.h  FloorButton.h  GuiElevator.h  LocalController.h  ServerComModule.h
resources/: Controls.qml  qml.qrc
src/: CallButton.cpp  ClientComModule.cpp  Elevator.cpp  FloorButton.cpp  GuiElevator.cpp  LocalController.cpp  ServerComModule.cpp  ServerController.cpp  main.cpp
